# job-ranker

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: api.py  classifier.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: DataTable.js  Input.js  Jobs.js  Progress.js  Title.js
frontend/src/styles/: Input.css  Jobs.css  Title.css
scrape-jobs/: pyproject.toml  scrape_jobs.py
