[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nikkiptaylor <nicolept@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.31.0"
huggingface-hub = "^0.16.4"
pandas = "^2.0.3"
torch = "^2.0.1"
setuptools = "^68.0.0"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
loguru = "^0.7.0"
websockets = "^11.0.3"
ipykernel = "^6.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
