[tool.poetry]
name = "scrape-jobs"
version = "0.1.0"
description = ""
authors = ["nikkiptaylor <nicolept@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
bs4 = "^0.0.1"
requests-html = "^0.10.0"
pyppeteer = "^1.0.2"
selenium = "^4.10.0"
chromedriver-install = "^1.0.3"
webdriver-manager = "^3.9.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
